--- a/.github/CI.yml
+++ b/.github/CI.yml
@@ -45,4 +45,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: release-binary
-        path: ${{ env.WORKING_DIR }}/target/release/add
+        path: ${{ env.WORKING_DIR }}/target/release/main
